fixed jumping

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -49,7 +49,6 @@ body{
 
 .modal-content{
 	 border-radius: 2px;
-	 height: 200px;
 	 margin-top: 30%;
 }
 
